fix: header layout shift

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -47,6 +47,7 @@
   max-width: 635px;
   position: absolute;
   z-index: 10;
+  margin-top: -3rem;
 }
 
 
